# Octopus-vst

./: .gitignore  CMakeLists.txt
.github/workflows/: build.yml
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PresetManager.cpp  PresetManager.h  SynthSound.h  SynthVoice.cpp  SynthVoice.h
